--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,11 @@
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
+    margin: 0 auto;
+    padding:0;
+}
+
 /* horny cierny pruh */
 .top-bar {
     background-color: black;
