--- a/css/product-body.css
+++ b/css/product-body.css
@@ -34,7 +34,27 @@
     width: 100%; /* Make the image expand to fill the div */
     height: auto; /* maintaining aspect ratio */
     /*border: 0.1px solid gray;*/
+    cursor: pointer;
 }
+
+/*JUST thumbnail*/
+.lightbox {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    cursor: zoom-out;
+}
+
+.lightbox-img {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+
+
 /* ********************  ******************* ******************* */
 
 
