--- a/css/product-body.css
+++ b/css/product-body.css
@@ -143,10 +143,10 @@
     border: 1px solid #000;
 }
 
-.quantity-button {
+.quantity-selector button {
     background: transparent;
     border: none;
-    padding: .5rem 0.5rem;
+    padding: 0.5rem 0.5rem;
     font-size: 1.25rem;
     cursor: pointer;
 }
@@ -156,3 +156,7 @@
     text-align: center;
     font-size: 1rem;
 }
+
+
+
+
