--- a/css/checkout-payment.css
+++ b/css/checkout-payment.css
@@ -51,8 +51,8 @@
     flex: 1;
 }
 
-button {
-    width: 100%;
+#pay-button {
+    width: 80%;
     padding: 1rem;
     background: #000;
     color: #fff;
@@ -62,6 +62,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+#pay-button:hover {
     opacity: 0.9;
 }
