--- a/css/home_body.css
+++ b/css/home_body.css
@@ -108,7 +108,8 @@ main {
     width: 100%;
     height: auto;      /* Keep image ratio automatically */
     display: block;
-    border-radius: 5px;
+    border-radius: 7px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Product name or any text below the image */
