Add profile page

--- a/css/checkout-address.css
+++ b/css/checkout-address.css
@@ -1,6 +1,6 @@
 
 .container {
-    margin-top: 5rem;
+    margin-top: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,8 +16,6 @@
     box-shadow: 0 4px 16px rgba(0,0,0,0.1);
     text-align: center;
 }
-
-
 
 .address-form input,
 .address-form select,
@@ -66,8 +64,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 1rem;
 }
 
 .address-form button:hover {
     opacity: 0.85;
 }
+
+
