--- a/css/register-page.css
+++ b/css/register-page.css
@@ -79,13 +79,15 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 main {
     flex: 1;
     display: flex;
     justify-content: center;
-    padding: 2rem 1rem;
+    align-items: center;
+    padding: 0;
 }
+
 
