--- a/css/admin_add_product_detail.css
+++ b/css/admin_add_product_detail.css
@@ -141,6 +141,30 @@
     align-self: flex-start; /* zarovná doľava */
 }
 
+.navbar-right {
+    margin-left: auto;
+    display: flex;
+    align-items: end;
+    gap: 15px;
+}
+
+.logout-button {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+
+.section-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0;
+    margin-top: 2rem;
+}
 
 
 
