--- a/css/checkout-address.css
+++ b/css/checkout-address.css
@@ -1,6 +1,6 @@
 
 .container {
-    margin-top: 4rem;
+    margin-top: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,3 +72,12 @@
 }
 
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main.container {
+    flex: 1;
+}
