--- a/css/product-body.css
+++ b/css/product-body.css
@@ -54,9 +54,7 @@
 }
 
 
-
-/* ********************  ******************* ******************* */
-
+/* ********************************************************* */
 
 
 .product-description {
