--- a/css/products-view.css
+++ b/css/products-view.css
@@ -49,8 +49,9 @@ header {
     margin-top: 1.5rem;
 }
 
-.filter-section h5 {
+.filter-section h3 {
     margin-bottom: 0.5rem;
+    font-size: 1.2rem;
 }
 
 .filter-section label {
@@ -61,7 +62,7 @@ header {
 
 /*****************************************************/
 /* *****************MAIN CONTENT *****************  */
-main {
+.right-section {
     flex: 1; /* remaining space */
     /*background-color: green;*/
 }
