--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -86,7 +86,7 @@ body {
     width: 15px;
     height: 15px;
     margin-right: 5px;
-    margin-left: 5px;
+    margin-left: 1.5rem;
     margin-bottom: 5px;
 }
 
@@ -95,7 +95,7 @@ body {
     width: 150px;
     height: 30px;
     border: none;
-    background-color: transparent;
+    background-color: lightgrey;
 }
 
 /* Offcanvas menu */
