--- a/public/css/products-view.css
+++ b/public/css/products-view.css
@@ -177,7 +177,7 @@ header {
     padding: 0.5rem;
 }
 
-.pagination a {
+.pagination a, span {
     margin: 0 10px;
     text-decoration: none;
     color: #333;
