--- a/public/css/products-view.css
+++ b/public/css/products-view.css
@@ -146,7 +146,8 @@ header {
 
 .product-item img {
     width: 100%;
-    height: auto;
+    height: 23rem;
+    object-fit: contain; /* Ensures the image covers the area while maintaining aspect ratio */
     display: block;
     margin: 0 auto;
     border-radius: 7px;
