Add edit page with already completed details about product. Merge admin_add_product and adnim_edit_product into 1 blade (if product exists, detailes are completed)

--- a/public/css/home_body.css
+++ b/public/css/home_body.css
@@ -191,6 +191,7 @@ a {
     cursor:pointer;
     border:none;
     background:transparent;
+    pointer-events: auto;
 }
 .admin-product-edit:hover,
 .admin-product-delete:hover{
