--- a/public/css/products-view.css
+++ b/public/css/products-view.css
@@ -228,3 +228,44 @@ header {
 }
 
 
+
+
+/* ========== ADMIN ICONS  ========== */
+
+
+/* spoločné pre edit aj delete ikonku */
+.admin-product-edit,
+.admin-product-delete {
+    position: absolute;
+    bottom: 1rem;         /* 16px od spodnej hrany */
+    width: 1.5rem;        /* 24px */
+    height: 1.5rem;
+    padding: 0;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    z-index: 10;
+}
+
+/* offset sprava */
+.admin-product-edit {
+    right: 3rem;
+}
+.admin-product-delete {
+    right: 1rem;
+}
+
+/* zabezpecime, aby vnutri tlacidla ikonka isla na 100% */
+.admin-product-edit img,
+.admin-product-delete img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* jemny scale efekt na hover */
+.admin-product-edit:hover,
+.admin-product-delete:hover {
+    transform: scale(1.2);
+}
